# Code-Normalizer-Pro

./: .env.example  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CNP_FutureProof_Strategy.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTION_PLAN.md  MISSINGMORE.txt  PIZZA_SLICE.txt  PROJECT_CHECKLIST.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REFACTOR_LAW.txt  Round-2-Edge-Test.txt  SECURITY.md  VERIFY.md  __commit_msg.txt  action.yml  mkdocs.yml  project-tree-report.txt  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tech_debt.yml
.github/workflows/: ci.yml  codeql.yml  monthly_metrics.yml  quarterly_review.yml
code_normalizer_pro/: __init__.py  cli.py  code_normalizer_pro.py  config.py
code_normalizer_pro/engine/: cache.py  checkers.py  editorconfig.py  fileops.py  normalizer.py  reader.py  reporter.py  telemetry.py  text_transform.py  walker.py  workers.py
config/: settings.py
docs/: ARCHITECTURE.md  CODE_NORMALIZER_HISTORY.md  README.md  RUNBOOK.md  TEST_REPORT.md  VERIFY_legacy.md  pyproject.toml.archive
docs/community/: community_plan.md
docs/launch/: devto_article.md  first_100_users.csv  metrics_summary.json  outreach_calendar_week1.md  path1_execution_tracker.md  path1_outreach.md  top_pain_points.json  top_pain_points.md
docs/release/: alpha_release_checklist.md  release_readiness.json
docs/sales/: customer_offer_template.md  path1_pricing.md  pipeline.csv  pipeline_metrics.json
examples/: ci_gate.yml  normalize_repo.sh  pyproject_config.toml
pytest-cache-files-rr8e6ubw/v/cache/: nodeids
roadmaps/: 01_solo_dev_tool.md  02_dev_tool_saas.md  03_enterprise_platform.md  04_open_source_support.md  05_grammarly_for_code.md  06_ai_transformation_engine.md  README.md
scripts/: feedback_prioritizer.py  launch_metrics.py  release_prep.py  sales_pipeline_metrics.py
site/: index.html  styles.css
tests/: test_code_normalize_pro.py  test_engine_modules.py  test_feedback_prioritizer.py  test_launch_metrics.py  test_release_prep.py  test_sales_pipeline_metrics.py
