[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-normalizer-pro"
version = "3.2.0"
description = "Production-grade code normalization tool for encoding, newlines, and whitespace hygiene."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{name = "Michael Rawls Jr.", email = "rawlsjrm@gmail.com"}]
dependencies = ["tqdm", "typer", "loguru", "rich>=13.0", "tomli>=2.0; python_version < '3.11'"]
keywords = ["code-quality", "formatter", "normalization", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.urls]
Homepage   = "https://github.com/MRJR0101/Code-Normalizer-Pro"
Source     = "https://github.com/MRJR0101/Code-Normalizer-Pro"
"Bug Tracker" = "https://github.com/MRJR0101/Code-Normalizer-Pro/issues"
Changelog  = "https://github.com/MRJR0101/Code-Normalizer-Pro/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev  = ["pytest>=8", "pytest-cov", "ruff>=0.4", "mypy>=1.0", "pyright>=1.1"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.scripts]
code-normalizer-pro = "code_normalizer_pro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_normalizer_pro*"]
